[package]
name = "llama-server-rs"
version = "0.1.0"
edition = "2021"

build = "build.rs"
links = "llama"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.5.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[build-dependencies]
bindgen = "0.58"
